--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +18,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.InkTest"
         tools:targetApi="31">
+        <activity
+            android:name=".face_camera.FaceCameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".face.FaceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".digit.DigitActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
